--- a/src/index.html
+++ b/src/index.html
@@ -18,5 +18,6 @@
     <include src="./partials/customer-reviews.html"></include>
     <include src="./partials/contacts.html"></include>
     <include src="./partials/footer.html"></include>
+    <include src="./partials/franchise-modal.html"></include>
   </body>
 </html>
