--- a/src/index.html
+++ b/src/index.html
@@ -20,5 +20,6 @@
     <include src="./partials/contacts.html"></include>
     <include src="./partials/footer.html"></include>
     <include src="./partials/read-more-modal.html"></include>
+    <script type="module" src="./js/modal.js"></script>
   </body>
 </html>
