--- a/src/index.html
+++ b/src/index.html
@@ -20,6 +20,7 @@
     <include src="./partials/contacts.html"></include>
     <include src="./partials/footer.html"></include>
     <include src="./partials/read-more-modal.html"></include>
+    <include src="./partials/franchise-modal.html"></include>
     <script type="module" src="./js/modal.js"></script>
   </body>
 </html>
