--- a/src/index.html
+++ b/src/index.html
@@ -22,7 +22,7 @@
     <include src="./partials/franchise-modal.html"></include>
     <include src="./partials/read-more-modal.html"></include>
     <include src="./partials/location-modal.html"></include>
-    <include src="./partials/ingredients-modal.html"></include>
+    <!-- <include src="./partials/ingredients-modal.html"></include> -->
     <script type="module" src="./js/modal.js"></script>
   </body>
 </html>
