--- a/src/index.html
+++ b/src/index.html
@@ -19,6 +19,10 @@
     <include src="./partials/customer-reviews.html"></include>
     <include src="./partials/contacts.html"></include>
     <include src="./partials/footer.html"></include>
-    <script src="https://cdn.jsdelivr.net/npm/swiper/swiper-bundle.min.js"></script>
+    <include src="./partials/franchise-modal.html"></include>
+    <include src="./partials/read-more-modal.html"></include>
+    <include src="./partials/location-modal.html"></include>
+    <include src="./partials/ingredients-modal.html"></include>
+    <script type="module" src="./js/modal.js"></script>
   </body>
 </html>
