--- a/src/index.html
+++ b/src/index.html
@@ -25,5 +25,8 @@
     <include src="./partials/location-modal.html"></include>
     <include src="./partials/ingredients-modal.html"></include>
     <script type="module" src="./js/modal.js"></script>
+
+    <script src="https://cdn.jsdelivr.net/npm/swiper/swiper-bundle.min.js"></script>
+    <script type="module" src="./js/slider.js"></script>
   </body>
 </html>
