--- a/src/index.html
+++ b/src/index.html
@@ -1,36 +1,36 @@
 <!DOCTYPE html>
 <html lang="ru">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Page title</title>
 
-    <link
-      rel="stylesheet"
-      href="https://cdn.jsdelivr.net/npm/swiper/swiper-bundle.min.css"
-    />
-    <link rel="stylesheet" href="./sass/index.scss" />
-    <link rel="icon" type="image/jpg" href="./images/favicon.jpg" />
-    <script type="module" src="./js/index.js"></script>
-  </head>
+<head>
+	<meta charset="UTF-8" />
+	<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+	<title>Page title</title>
 
-  <body>
-    <!------------------  Add partials like so for every page ------------->
-    <include src="./partials/hero-header.html"></include>
-    <include src="./partials/products.html"></include>
-    <include src="./partials/about.html"></include>
-    <include src="./partials/advantages.html"></include>
-    <include src="./partials/gallery.html"></include>
-    <include src="./partials/customer-reviews.html"></include>
-    <include src="./partials/contacts.html"></include>
-    <include src="./partials/footer.html"></include>
-    <include src="./partials/franchise-modal.html"></include>
-    <include src="./partials/read-more-modal.html"></include>
-    <include src="./partials/location-modal.html"></include>
-    <include src="./partials/ingredients-modal.html"></include>
-    <script type="module" src="./js/modal.js"></script>
+	<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper/swiper-bundle.min.css" />
+	<link rel="stylesheet" href="./sass/index.scss" />
+	<link rel="icon" type="image/jpg" href="./images/favicon.jpg" />
+	<script type="module" src="./js/index.js"></script>
+</head>
 
-    <script src="https://cdn.jsdelivr.net/npm/swiper/swiper-bundle.min.js"></script>
-    <script type="module" src="./js/slider.js"></script>
-  </body>
+<body>
+	<!------------------  Add partials like so for every page ------------->
+	<include src="./partials/hero-header.html"></include>
+	<include src="./partials/products.html"></include>
+	<include src="./partials/about.html"></include>
+	<include src="./partials/advantages.html"></include>
+	<include src="./partials/gallery.html"></include>
+	<include src="./partials/customer-reviews.html"></include>
+	<include src="./partials/contacts.html"></include>
+	<include src="./partials/footer.html"></include>
+	<include src="./partials/franchise-modal.html"></include>
+	<include src="./partials/read-more-modal.html"></include>
+	<include src="./partials/location-modal.html"></include>
+	<include src="./partials/ingredients-modal.html"></include>
+	<script type="module" src="./js/modal.js"></script>
+
+	<script src="https://cdn.jsdelivr.net/npm/swiper/swiper-bundle.min.js"></script>
+	<script type="module" src="./js/slider.js"></script>
+	<script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+</body>
+
 </html>
