--- a/src/index.html
+++ b/src/index.html
@@ -15,6 +15,7 @@
 <body>
 	<!------------------  Add partials like so for every page ------------->
 	<include src="./partials/hero-header.html"></include>
+	<include src="./partials/buy-now-modal.html"></include>
 	<include src="./partials/products.html"></include>
 	<include src="./partials/about.html"></include>
 	<include src="./partials/advantages.html"></include>
